# nft-game-agent-registry-solana

./: README.md  package-lock.json  package.json
nft-game-agent-program/: Anchor.toml  metadata.json  package.json  reset_validator.sh  tsconfig.json
nft-game-agent-program/programs/nft-game-agent-program/: Cargo.toml
nft-game-agent-program/programs/nft-game-agent-program/src/: lib.rs
nft-game-agent-program/programs/nft-game-agent-program/src/errors/: error.rs  mod.rs
nft-game-agent-program/programs/nft-game-agent-program/src/instructions/: creat_collections.rs  mint_ai_agent.rs  mod.rs
nft-game-agent-program/programs/nft-game-agent-program/src/state/: collection.rs  mod.rs
nft-game-agent-program/tests/: nft-game-agent-program.ts
src/components/: Layout.tsx
src/hooks/: useAnchorProgram.ts
src/pages/: .mint.tsx.swp  _app.tsx  index.tsx  mint.tsx  registry.tsx
src/styles/: globals.css
src/utils/: constants.ts  solanaHelpers.ts  types.ts
